WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
209041
Report crashed cell in jsCast in debug builds
https://bugs.webkit.org/show_bug.cgi?id=209041
Summary
Report crashed cell in jsCast in debug builds
Yusuke Suzuki
Reported
2020-03-12 23:26:12 PDT
Log jsCast crash data to collect information
Attachments
Patch
(11.85 KB, patch)
2020-03-12 23:30 PDT
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
Patch
(11.86 KB, patch)
2020-03-12 23:33 PDT
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
Patch
(12.03 KB, patch)
2020-03-12 23:36 PDT
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
Patch
(12.05 KB, patch)
2020-03-12 23:39 PDT
,
Yusuke Suzuki
mark.lam
: review+
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2020-03-12 23:30:03 PDT
Created
attachment 393460
[details]
Patch
Yusuke Suzuki
Comment 2
2020-03-12 23:30:06 PDT
<
rdar://problem/59705631
>
Yusuke Suzuki
Comment 3
2020-03-12 23:33:49 PDT
Created
attachment 393461
[details]
Patch
Yusuke Suzuki
Comment 4
2020-03-12 23:36:46 PDT
Created
attachment 393462
[details]
Patch
Yusuke Suzuki
Comment 5
2020-03-12 23:39:30 PDT
Created
attachment 393463
[details]
Patch
Mark Lam
Comment 6
2020-03-12 23:57:39 PDT
Comment on
attachment 393463
[details]
Patch r=me if EWS bots are happy.
Yusuke Suzuki
Comment 7
2020-03-13 00:46:24 PDT
Comment on
attachment 393463
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=393463&action=review
> Source/JavaScriptCore/runtime/JSCast.h:36 > +#if ASSERT_ENABLED && CPU(X86_64)
I'll change this to `#if (ASSERT_ENABLED || ENABLE(SECURITY_ASSERTIONS)) && CPU(X86_64)` to get reports in ASan bots.
Yusuke Suzuki
Comment 8
2020-03-13 00:53:38 PDT
Committed
r258386
: <
https://trac.webkit.org/changeset/258386
>
Yusuke Suzuki
Comment 9
2020-03-13 00:57:21 PDT
Committed
r258387
: <
https://trac.webkit.org/changeset/258387
>
Saam Barati
Comment 10
2020-03-13 11:20:00 PDT
Comment on
attachment 393463
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=393463&action=review
>> Source/JavaScriptCore/runtime/JSCast.h:36 >> +#if ASSERT_ENABLED && CPU(X86_64) > > I'll change this to `#if (ASSERT_ENABLED || ENABLE(SECURITY_ASSERTIONS)) && CPU(X86_64)` to get reports in ASan bots.
why just x86?
Yusuke Suzuki
Comment 11
2020-03-13 11:24:24 PDT
Comment on
attachment 393463
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=393463&action=review
>>> Source/JavaScriptCore/runtime/JSCast.h:36 >>> +#if ASSERT_ENABLED && CPU(X86_64) >> >> I'll change this to `#if (ASSERT_ENABLED || ENABLE(SECURITY_ASSERTIONS)) && CPU(X86_64)` to get reports in ASan bots. > > why just x86?
Currently we are supporting reportZappedCellAndCrash only on X86_64.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug