Report crashed cell in jsCast in debug builds https://bugs.webkit.org/show_bug.cgi?id=209041 <rdar://problem/59705631>

Reviewed by Mark Lam.

Source/JavaScriptCore:

To collect more information when crashing with jsCast, we attempt to use reportZappedCellAndCrash.
If it succeeds, we can get more information in registers. We enable this only for ASSERT_ENABLED
build. For non ASSERT_ENABLED, we keep the original assertion since this assertion can be enabled
via ENABLE(SECURITY_ASSERTIONS).

* heap/SlotVisitor.cpp:
(JSC::SlotVisitor::appendToMarkStack):
(JSC::SlotVisitor::visitChildren):
(JSC::SlotVisitor::reportZappedCellAndCrash): Deleted.
* heap/SlotVisitor.h:
* runtime/JSCast.h:
(JSC::jsCast):
* runtime/JSCell.cpp:
(JSC::reportZappedCellAndCrash):
* runtime/JSCell.h:

Source/WebCore:

We should take JSLock when touching JSC::VM.

* page/MemoryRelease.cpp:
(WebCore::logMemoryStatisticsAtTimeOfDeath):
* page/PerformanceLogging.cpp:
(WebCore::PerformanceLogging::memoryUsageStatistics):

Canonical link: https://commits.webkit.org/221943@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@258386 268f45cc-cd09-0410-ab3c-d52691b4dbfc