Source/WebCore/page/PerformanceLogging.cpp
@@ -56,6 +56,7 @@ HashMap<const char*, size_t> PerformanceLogging::memoryUsageStatistics(ShouldInc
     HashMap<const char*, size_t> stats;
 
     auto& vm = commonVM();
+    JSC::JSLockHolder locker(vm);
     stats.add("javascript_gc_heap_capacity", vm.heap.capacity());
     stats.add("javascript_gc_heap_extra_memory_size", vm.heap.extraMemorySize());
 
